--- a/index.html
+++ b/index.html
@@ -932,6 +932,10 @@
 				<li><img src="img/user_tv.gif" style="margin-left: 10px;height: 70px;">
 				</li>
 			</ul>
+			<div class="col-lg-3 top-left" >
+				<a href="https://blog.csdn.net/mohuanxiaoyuzhou/article/details/116404508">我的学习总结博客</a>
+			
+			</div>
 		</div>
 	</footer>
 	<div class="container-fluid">
