--- a/index.html
+++ b/index.html
@@ -931,11 +931,12 @@
 				</li>
 				<li><img src="img/user_tv.gif" style="margin-left: 10px;height: 70px;">
 				</li>
-			</ul>
-			<div class="col-lg-3 top-left" >
+				<div >
 				<a href="https://blog.csdn.net/mohuanxiaoyuzhou/article/details/116404508">我的学习总结博客</a>
 			
-			</div>
+				</div>
+			</ul>
+			
 		</div>
 	</footer>
 	<div class="container-fluid">
