--- a/index.html
+++ b/index.html
@@ -913,9 +913,9 @@
 				<h5>MCN管理中心</h5>
 				<h5>高级弹幕</h5>
 				<h5>企业号官网</h5>
-				<h5>
+				<div>
 				<a href="https://blog.csdn.net/mohuanxiaoyuzhou/article/details/116404508">我的学习总结博客</a>
-				</h5>
+				</div>
 			</div>
 			<div class="list-inline visible-xs">
 				<img src="img/user_tv.gif">
