--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<form style="margin-top: 10px;" class="form-inline">
 						<div class="form-group">
 							<div class="input-group">
-								<input type="text" class="form-control" placeholder="B站热门2020全年总结">
+								<input type="text" class="form-control" placeholder="用五条悟做一个无限夹娃娃机">
 								<div class="input-group-addon "><img src="img/search.svg"></div>
 							</div>
 						</div>
@@ -313,7 +313,7 @@
 					<form style="margin-top: 10px;" class="form-inline">
 						<div class="form-group">
 							<div class="input-group">
-								<input type="text" class="form-control" placeholder="B站热门2020全年总结">
+								<input type="text" class="form-control" placeholder="用五条悟做一个无限夹娃娃机">
 								<div class="input-group-addon "><img src="img/search.svg"></div>
 							</div>
 						</div>
@@ -341,7 +341,7 @@
 			<ul class="list-inline">
 				<li>3.9万播放 ·
 					491弹幕
-					2021-01-03 11:00:16</li>
+					2021-05-05 11:00:16</li>
 			</ul>
 		</div>
 	</div>
@@ -565,7 +565,7 @@
 						<form style="margin-top: 10px;" class="form-inline">
 							<div class="form-group">
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="B站热门2020全年总结">
+									<input type="text" class="form-control" placeholder="用五条悟做一个无限夹娃娃机">
 									<div class="input-group-addon "><img src="img/search.svg"></div>
 								</div>
 							</div>
@@ -693,7 +693,7 @@
 						<div class="carousel-inner" id="img1">
 							<div class="item active"><img src="img/img1.jpg" /></div>
 							<div class="item"><img src="img/img2.jpg" /></div>
-							<div class="item"><img src="img/img3.jpg"></div>
+							<div class="item"><img src="img/img5.jpg"></div>
 							<div class="item"><img src="img/img4.jpg"></div>
 							<div class="item"><img src="img/img5.jpg"></div>
 							<a href="#slidershow2" data-slide="prev" class="right carousel-control" role="button"></a>
@@ -763,7 +763,7 @@
 							<h4><strong>推广</strong></h4>
 						</span>
 					</li>
-					<li><span><img src="img/huo.svg"> B站年度报告来啦！ </span></li>
+					<li><span><img src="img/huo.svg">  </span></li>
 					<li class="navbar-right"><input type="button" value="在线列表" class="form-control" id="zx" /></li>
 				</ul>
 			</div>
