--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<form style="margin-top: 10px;" class="form-inline">
 								<div class="form-group">
 									<div class="input-group">
-										<input type="text" class="form-control" placeholder="B站热门2020全年总结">
+										<input type="text" class="form-control" placeholder="用五条悟做一个无限夹娃娃机">
 										<div class="input-group-addon "><img src="img/search.svg"></div>
 									</div>
 								</div>
